fixed new background image, and copy and added a new slide after patient1view19, spacing and rollover fixes as well

--- a/src/javascript/templates/patient1/patient1View21.hbs
+++ b/src/javascript/templates/patient1/patient1View21.hbs
@@ -77,28 +77,10 @@
 
 
                     <!-- Button trigger modal -->
-                    <a class="continue next"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Next &#8594;</button></a>
+                    <a data-navigate="patient1view22" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
 
                     <!-- Modal -->
-                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                      <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                          <div class="modal-body">
-                          <h2>Velma’s ER Test results are in!</h2>
-                          <p><span class="pink-hl">Velma Belt’s ER Test Results:  Positive</span><br><br>
 
-Velma’s tissue tested positive for estrogen receptor.  This indicates Velma’s breast cancer may respond well to hormone blocking therapy.<br><br>
-
-Be sure to record the results in your Lab Handbook.</p>
-
-                          </div>
-                          <div class="modal-footer background-nav-blue">
-                            <a data-navigate="patient1view22" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
-
-                          </div>
-                        </div>
-                      </div>
-                    </div>
 
 
                   </div>
