--- a/src/javascript/templates/patient1/patient1View37.hbs
+++ b/src/javascript/templates/patient1/patient1View37.hbs
@@ -55,7 +55,7 @@
                             </li>
                             <li class="7th-step active">
                                 <span class="dot active">
-                                    
+
                                 </span>
                                 <span class="dot active pulse"></span>
                             </li>
@@ -136,12 +136,12 @@
             <div class="modal fade" id="modalAnswer2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
-                        <div class="modal-body pat2">
-                            <h2>You did not select the appropriate treatment plan based on Velma’s test results.  Review your patient notes and try again.</h2>
+                        <div class="modal-body pat1">
+                            <h2>Incorrect. You did not select the appropriate treatment plan based on Velma’s test results.  Review your patient notes and try again.</h2>
                         </div>
                         <div class="modal-footer background-nav-blue">
                             <a class="continue-2">
-                                <button  name="button">Try Again</button>
+                                <button data-dismiss="modal" name="button">Try Again</button>
                             </a>
                         </div>
                     </div>
@@ -160,12 +160,12 @@
             <div class="modal fade" id="modalAnswer3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
-                        <div class="modal-body pat2">
-                            <h2>You did not select the appropriate treatment plan based on Velma’s test results.  Review your patient notes and try again.</h2>
+                        <div class="modal-body pat1">
+                            <h2>Incorrect. You did not select the appropriate treatment plan based on Velma’s test results.  Review your patient notes and try again.</h2>
                         </div>
                         <div class="modal-footer background-nav-blue">
                             <a  class="continue-2">
-                                <button  name="button">Continue</button>
+                                <button data-dismiss="modal" name="button">Try Again</button>
                             </a>
                         </div>
                     </div>
@@ -183,12 +183,12 @@
             <div class="modal fade" id="modalAnswer4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
-                        <div class="modal-body pat2">
-                            <h2>You did not select the appropriate treatment plan based on Velma’s test results.  Review your patient notes and try again.</h2>
+                        <div class="modal-body pat1">
+                            <h2>Incorrect. You did not select the appropriate treatment plan based on Velma’s test results.  Review your patient notes and try again.</h2>
                         </div>
                         <div class="modal-footer background-nav-blue">
                             <a class="continue-2">
-                                <button  name="button">Try Again</button>
+                                <button data-dismiss="modal" name="button">Try Again</button>
                             </a>
                         </div>
                     </div>
