--- a/src/javascript/templates/patient2/patient2view12.hbs
+++ b/src/javascript/templates/patient2/patient2view12.hbs
@@ -60,7 +60,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
 </h2>
       </div>
       <div class="modal-footer background-nav-blue">
-         <a class="continue-2"><button  name="button">Try Again</button></a>
+         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>
       </div>
     </div>
   </div>
@@ -81,7 +81,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
       <h2>Incorrect. You did not select the most appropriate adjuvant treatment option based on Michele’s test results. Please review your Lab Handbook and select another treatment option.</h2>
       </div>
       <div class="modal-footer background-nav-blue">
-         <a class="continue-2"><button  name="button">Try Again</button></a>
+         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>
       </div>
     </div>
   </div>
@@ -120,7 +120,7 @@ Use the notes from your Lab Handbook to recommend a personalized treatment plan 
       <h2>Incorrect. You did not select the most appropriate adjuvant treatment option based on Michele’s test results. Please review your Lab Handbook and select another treatment option.</h2>
       </div>
       <div class="modal-footer background-nav-blue">
-         <a class="continue-2"><button  name="button">Try Again</button></a>
+         <a class="continue-2"><button data-dismiss="modal" name="button">Try Again</button></a>
       </div>
     </div>
   </div>
