--- a/src/javascript/templates/patient1/patient1View19-5.hbs
+++ b/src/javascript/templates/patient1/patient1View19-5.hbs
@@ -56,21 +56,15 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-      Velma’s doctors have sent her tissue sample for ER testing.
+    Velma’s ER Test results are in!
     </blockquote>
-    <main id="content-main" class="row patient-1 svg-test">
+    <main id="content-main" class="row patient-1">
 
-        <h2>Conducting the ER test:</h2>
-        <div class="svg-container">
-            <img src="images/ER_Invasive3.jpg" alt="cell biopsy slide 3" />
-            <div class="svg-text full">
-                <p>
-                  <strong>Step 3:</strong> The sample is viewed under a microscope. Brown color indicates a positive test. No brown color indicates a negative test.
-                </p>
-                  <a data-navigate="patient1view19_5" class="y-n continue next left-arrow" ><span type="button"  name="button"class="top-3">&#8594;</span></a>
+          <p><span class="pink-hl">Velma Belt’s ER Test Results:  Positive</span><br><br>
 
-            </div>
-        </div>
+            Velma’s tissue tested positive for estrogen receptor.  This indicates Velma’s breast cancer may respond well to hormone blocking therapy.<br><br>
+
+            Be sure to record the results in your Lab Handbook.</p>
         <div class="row continue-container background-nav-blue">
             <div class="col-md-12 no-pad text-center">
               <div class="col-md-4">
@@ -83,7 +77,7 @@
 
 
                 <!-- Button trigger modal -->
-                <a class="continue next"><button class="muted" type="button"  name="button">Next &#8594;</button></a>
+                <a data-navigate="patient1view20" class="continue next"><button class="" type="button"  name="button">Next &#8594;</button></a>
 
                 <!-- Modal -->
 
