fixed a couple popup bugs and copy and put in certificate at end of module

--- a/src/javascript/templates/endView.hbs
+++ b/src/javascript/templates/endView.hbs
@@ -19,7 +19,7 @@ Congratulations, you have completed the Decoding Cancer Virtual Lab.    </blockq
 
       <p>As you have experienced in this lab, precision medicine reduces over-treatment and under-treatment of cancer. Precision medicine better defines options for treatment accounting for an individual’s unique tumor characteristics and other patient factors.<br><br>
 This targeted approach offers particular promise in the treatment of breast cancer because it offers a more specific therapy with greater benefit and fewer side effects.<br><br>
-In keeping with the MoonShot initiative to cure cancer, a better understanding of the unique characteristics of each tumor will guide the development of more effective treatments for cancer patients.  This strategy will one day allow us to win the war against cancer.<br><br> <a style="color:#337ab7;" >Click here to download your certificate of completion.</a>
+In keeping with the MoonShot initiative to cure cancer, a better understanding of the unique characteristics of each tumor will guide the development of more effective treatments for cancer patients.  This strategy will one day allow us to win the war against cancer.<br><br> <a href="images/discovery_decodingcancer_cert_final.1.pdf" style="color:#337ab7;" >Click here to download your certificate of completion.</a>
 
 </p>
 <figure><img src="images/patient_and_doctor3.jpg" alt="" /></figure>
