--- a/src/javascript/templates/patient2/patient2view10.hbs
+++ b/src/javascript/templates/patient2/patient2view10.hbs
@@ -56,7 +56,7 @@
 <figure>
   <img class=" one-hun" class="zoom"  src="images/Microscope_GreenRedDots_8_3.jpg" alt="cell biopsy slide 3" />
 </figure>
-<div class="row m-bottom multi-pad">
+<div class="row m-bottom pad50">
 
 
 <div class="col-md-5 yes-no col-sm-offset-1-5">
