--- a/src/javascript/templates/patient3/patient3View14.hbs
+++ b/src/javascript/templates/patient3/patient3View14.hbs
@@ -1,4 +1,4 @@
-<!-- <div class="spacer2"></div>
+<div class="spacer2"></div>
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
@@ -67,7 +67,7 @@ Click below to make your selection for next steps. </p>
                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat3">
                        <h2>That is correct. Based on Brittany’s test results, you have enough information to make a treatment recommendation.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
@@ -79,7 +79,7 @@ Click below to make your selection for next steps. </p>
                  <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat3">
                        <h2>That is incorrect. You now have enough information to make a treatment recommendation.</h2>
                        </div>
                        <div class="modal-footer background-nav-blue">
@@ -102,10 +102,10 @@ Click below to make your selection for next steps. </p>
     </main>
   </div>
 
-</div> -->
+</div>
 
 
-<div class="spacer2"></div>
+<!-- <div class="spacer2"></div>
 <div class="row">
   <div class="col-md-3 no-pad">
     <div id="side-navs-fixed">
@@ -155,23 +155,22 @@ Do you have enough information to make a recommendation for treatment or do you 
 <br><br>
   Click below to make your selection for next steps.
 </p>
-         <!-- <figure class="m-bottom">
+         <figure class="m-bottom">
            <img src="images/patient2slide1.png" alt="" />
 
 
 
-         </figure> -->
+         </figure>
          <div class="row continue-container background-nav-blue">
              <div class="col-md-12 no-pad text-center">
                <div class="col-md-6">
 
 
-                 <!-- Button trigger modal -->
                  <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal" >Select Treatment</button></a>
 
 
 
-                 <!-- Modal -->
+
                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
@@ -214,4 +213,4 @@ Do you have enough information to make a recommendation for treatment or do you 
     </main>
   </div>
 
-</div>
+</div> -->
