fixed last spacing issue, removed copy that was supposed to be there on micrscope slides

--- a/src/javascript/templates/patient1/patient1View28.hbs
+++ b/src/javascript/templates/patient1/patient1View28.hbs
@@ -103,11 +103,9 @@ Should the test results be reported as amplified or not amplified?<br><br>
             <div class="svg-container">
                 <img class="pro-fix" src="images/Microscope_GreenRedDots_6_6.jpg" alt="cell biopsy slide 3" />
 
-                <p class="black pad50">
-                  Now you’re ready to observe the fluorescence micrograph!
-                </p>
+
             </div>
-            <p class="multi-pad">
+            <p class=" pad50">
               <strong>Be sure to record the results in your Lab Handbook.
               </strong>
             </p>
