--- a/src/javascript/templates/patient1/patient1View37.hbs
+++ b/src/javascript/templates/patient1/patient1View37.hbs
@@ -195,7 +195,7 @@
                 </div>
             </div>
             <p class="multi-pad">
-              before getting an update on your patient’s status. Once you are done with your recommendation,
+            You may change your recommendation before getting an update on your patient’s status. Once you are done with your recommendation,
                you can review your patient’s status.<br><br>
 
                 <strong>Be sure to record the information in your Lab Handbook.<strong>
