--- a/src/javascript/templates/patient1/patient1View38.hbs
+++ b/src/javascript/templates/patient1/patient1View38.hbs
@@ -59,7 +59,7 @@
                   </blockquote>
                     <main id="content-main" class="row patient-1 svg-test">
 
-                      <p>
+                      <p class="pad50">
                         Take this quiz after you have completed the interactive to demonstrate your understanding.
 
                       </p>
