--- a/src/javascript/templates/patient1/patient1View13-5.hbs
+++ b/src/javascript/templates/patient1/patient1View13-5.hbs
@@ -55,7 +55,7 @@
                   </blockquote>
                     <main id="content-main" class="row patient-1 svg-test">
 
-                        <p>
+                        <p class="pad50">
                           Take this quiz to refresh what you have learned and that will help you with this lesson.
 
                         </p>
