--- a/src/javascript/templates/patient3/patient3view12.hbs
+++ b/src/javascript/templates/patient3/patient3view12.hbs
@@ -22,7 +22,7 @@
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_ertest_over.png" alt="" /></span> ER Test</li>
           </ul>
-         
+
           <ul>
             <li><span></span></li>
             <li class="border-bottom"><img src="images/icon_her2test_over.png" alt="" /></span> HER2 FISH Test</li>
@@ -51,7 +51,7 @@
                 <p>
                   Click to send Brittany's tissue sample for OncoType DX® testing.
                 </p>
-                  <a class="y-n continue next left-arrow" ><span type="button"  name="button" data-toggle="modal" data-backdrop="static" data-target="#myModal" class="top-4">&#8594;</span></a>
+                  <a data-navigate="patient3view13" href="/patient3view13" class="y-n continue next left-arrow" ><span type="button"  name="button"  class="top-4">&#8594;</span></a>
 
             </div>
         </div>
@@ -70,23 +70,7 @@
                 <a class="continue next"><button class="muted" type="button"  name="button">Next &#8594;</button></a>
 
                 <!-- Modal -->
-                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div style="text-align:left;" class="modal-body">
-                      <h2>Brittany’s OncoType DX® Test results are in!</h2>
-                      <p><span class="pink-hl">Brittany Featherston’s OncoType DX® Test Results: 35</span><br><br>
-Be sure to record the results in your Lab Handbook.
-</p>
 
-                      </div>
-                      <div class="modal-footer background-nav-blue">
-                        <a  class="continue-2" href="/patient3view13" data-navigate="patient3view14"><button id="next-page" type="button" class="next-page"  name="button">Continue</button></a>
-
-                      </div>
-                    </div>
-                  </div>
-                </div>
 
 
               </div>
