--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -42,7 +42,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
  </blockquote>
     <main id="content-main" class="row patient-3 top-gray svg-test">
 
-      <div class="header-gray">
+      <!-- <div class="header-gray">
         <div class="col-md-3">
           <img src="images/magnify_glass_icon.png" alt="magnifying glass icon" />
         </div>
@@ -53,7 +53,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
 </h4>
 
         </div>
-      </div>
+      </div> -->
       <p>Are the results amplified or not amplified?
  <br><br>
 <strong>Be sure to record this information in the Lab Handbook. Hover over the tissue samples to magnify.
@@ -78,7 +78,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-body">
-        <h2>Incorrect. Brittany’s tissue sample contains brown coloring. Her ER test is positive.</h2>
+        <h2><span class="pink-hl">Correct</span> Brittany’s tissue sample contains brown coloring. Her ER test is positive.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
           <a href="/patient3view11" data-navigate="patient3view9" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
@@ -95,7 +95,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-body">
-        <h2><span class="pink-hl">Correct</span> Brittany’s tissue sample contains brown coloring. Her ER test is positive.</h2>
+        <h2>Incorrect. Brittany’s tissue sample contains brown coloring. Her ER test is positive.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
           <a href="/patient3view11" data-navigate="patient3view9" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
