fixed popup on patient3view12

--- a/src/javascript/templates/patient3/patient3View13.hbs
+++ b/src/javascript/templates/patient3/patient3View13.hbs
@@ -37,70 +37,35 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-    Dr. You: Make a Decision
+  Brittany’s OncoType DX® Test results are in!
     </blockquote>
     <main id="content-main" class="row patient-3">
-<p>
 
-    What are the implications of Brittany’s test results on her treatment plan?  Record your thoughts in your Lab Handbook.<br><br>
+      <p><span class="pink-hl">Brittany Featherston’s OncoType DX® Test Results: 35</span><br><br>
+    Be sure to record the results in your Lab Handbook.
+    </p>
 
-Do you have enough information to make a recommendation for treatment or do you need additional information?  <br><br>
+    <div class="row continue-container background-nav-blue">
+        <div class="col-md-12 no-pad text-center">
+          <div class="col-md-4">
+            <a class="previous" href="/patient3view14" data-navigate="patient3view14"><button class="" type="button" name="button">&#8592; Previous</button></a>
+          </div>
+          <div class="col-md-4 line-across">
 
-Click below to make your selection for next steps. </p>
-         <!-- <figure class="m-bottom">
-           <img src="images/patient2slide1.png" alt="" />
-
-
-
-         </figure> -->
-         <div class="row continue-container background-nav-blue">
-             <div class="col-md-12 no-pad text-center">
-               <div class="col-md-6">
+          </div>
+          <div class="col-md-4 col-md-offset-4">
 
 
-                 <!-- Button trigger modal -->
-                 <a class="previous"><button class="select treatment" type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal" >Select Treatment</button></a>
+            <!-- Button trigger modal -->
+            <a data-navigate="patient3view14" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+
+            <!-- Modal -->
 
 
 
-                 <!-- Modal -->
-                 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                   <div class="modal-dialog" role="document">
-                     <div class="modal-content">
-                       <div class="modal-body">
-
-                       <h2>Select Treatment: You do not have enough information to select treatment for your patient. Please continue on to take the next test.</h2>
-                       </div>
-                       <div class="modal-footer background-nav-blue">
-                          <a class="continue-2" data-navigate="patient3view12" href="patient3view12"><button  name="button">Continue</button></a>
-                       </div>
-                     </div>
-                   </div>
-                 </div>
-
-
-               </div>
-               <div class="col-md-2 line-across">
-
-               </div>
-               <div class="col-md-4">
-                 <a class="continue next next-test"><button type="button"class="next-test"data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Next Test &#8594;</button></a>
-
-   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-   <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-body">
-      <h2>That is incorrect. You now have enough information to make a treatment recommendation. </h2>
-      </div>
-      <div class="modal-footer background-nav-blue">
-         <a class="continue-2" data-navigate="patient3view14" href="patient3view14"><button  name="button">Continue</button></a>
-      </div>
+          </div>
+        </div>
     </div>
-   </div>
-   </div>
-   </div>
-   </div>
-   </div>
     </main>
   </div>
 
