removed check marks from everything except yes no question

--- a/src/javascript/templates/patient1/patient1View28.hbs
+++ b/src/javascript/templates/patient1/patient1View28.hbs
@@ -65,7 +65,7 @@ Should the test results be reported as amplified or not amplified?<br><br>
 
 
 <div class="col-md-5 yes-no col-sm-offset-1-5">
-  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Amplified <span class="check-mark">&#x2717;</span></button></a>
+  <a  class="continue next y-n"><button type="button" data-toggle="modal" data-backdrop="static" data-target="#myModal2"  name="button">Amplified <span >&#x2717;</span></button></a>
   <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -81,7 +81,7 @@ Should the test results be reported as amplified or not amplified?<br><br>
   </div>
 </div>
 <div style="margin-left: 25px;" class="col-md-5 yes-no">
-  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Not Amplified <span class="check-mark mark2">&#x2713;</span></button></a>
+  <a  class="continue next y-n"><button  type="button"data-toggle="modal" data-backdrop="static" data-target="#myModal"  name="button">Not Amplified <span >&#x2713;</span></button></a>
 
   <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog" role="document">
