fixed multiple issues dealing mostly with copy but also with adding new slides after patient1view19

--- a/src/javascript/templates/patient2/patient2view11.hbs
+++ b/src/javascript/templates/patient2/patient2view11.hbs
@@ -69,7 +69,7 @@ Do you have enough information to make a recommendation for treatment or do you 
                  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                    <div class="modal-dialog" role="document">
                      <div class="modal-content">
-                       <div class="modal-body">
+                       <div class="modal-body pat2">
 
                        <h2>That is correct.  Based on Michele’s test results, you now have enough information to make a treatment recommendation. </h2><br>
                         <p style="text-transform:none">
@@ -96,7 +96,7 @@ Do you have enough information to make a recommendation for treatment or do you 
 <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-body">
+      <div class="modal-body pat2">
       <h2> That is incorrect. Based on Michele’s test results, you now have enough information to make a treatment recommendation.</h2>
 <p style="text-transform:none">Since the HER2 FISH test was amplified, the OncoType DX® Test is not required to determine whether or not chemotherapy should be a part of Michele’s treatment plan.</p>
 
