--- a/src/javascript/templates/patient1/patient1View37-5.hbs
+++ b/src/javascript/templates/patient1/patient1View37-5.hbs
@@ -79,12 +79,12 @@ Check on Velma's progress.    </blockquote>
                         <div class="modal-content">
                           <div class="modal-body">
                           <p>
-                          Following her treatment, physicians will monitor Velma to determine whether or not her breast cancer has returned.  If the cancer does not recur, the treatment approach was successful.  If her breast cancer recurs, the treatment approach was not successful.
+                          Following her treatment, physicians will monitor Velma to determine whether or not her breast cancer has returned.  If the cancer does not recur, the treatment approach was successful.  If her breast cancer recurs, the treatment approach was not successful.<br><br>
 <strong>As a result of hormonal therapy, Velma has not experienced a recurrence of breast cancer.  Success!</strong>
                           </p>
                           </div>
                           <div class="modal-footer background-nav-blue">
-                            <a data-navigate="patient1view38" class="continue"><button id="next-page" type="button"  name="button">Next &#8594;</button></a>
+                            <a data-navigate="patient1view38" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
 
                           </div>
                         </div>
