--- a/src/javascript/templates/patient2/patient2view8.hbs
+++ b/src/javascript/templates/patient2/patient2view8.hbs
@@ -91,7 +91,7 @@ Michele’s tissue sample has been sent for ER testing.  </blockquote>
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-body">
-        <h2><span class="pink-hl">Correct</span> Michele’s tissue sample does not contain brown coloring. Her ER test is negative.</h2>
+        <h2><span class="pink-hl">Correct</span>. Michele’s tissue sample does not contain brown coloring. Her ER test is negative.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
           <a href="/patient1view10" data-navigate="patient2view9" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
