--- a/src/javascript/templates/patient3/patient3view10.hbs
+++ b/src/javascript/templates/patient3/patient3view10.hbs
@@ -82,7 +82,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-body">
-        <h2><span class="pink-hl">Correct</span> The ratio of red dots to green dots is less than 2, so Brittany’s results are not amplified.</h2>
+        <h2><span class="pink-hl">Correct</span>. The ratio of red dots to green dots is less than 2, so Brittany’s results are not amplified.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
           <a href="/patient3view11" data-navigate="patient3view11" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
