--- a/src/javascript/templates/patient3/patient3view8.hbs
+++ b/src/javascript/templates/patient3/patient3view8.hbs
@@ -78,7 +78,7 @@ Brittany’s tissue sample has been sent for HER2 FISH testing.
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-body">
-        <h2><span class="pink-hl">Correct</span> Brittany’s tissue sample contains brown coloring. Her ER test is positive.</h2>
+        <h2><span class="pink-hl">Correct</span>. Brittany’s tissue sample contains brown coloring. Her ER test is positive.</h2>
         </div>
         <div class="modal-footer background-nav-blue">
           <a href="/patient3view11" data-navigate="patient3view9" class="continue"><button id="next-page" type="button"  name="button">Continue</button></a>
